# reviewer-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
codex_reviewer_mcp/: __init__.py  __main__.py  reviewer.py  server.py
codex_reviewer_mcp/prompts/: diff_review.md
opencode/plugins/: reviewer-mcp-autostart.js
reviewer_mcp/: __init__.py  __main__.py  auth.py  autostart.py  brain_sync.py  fingerprint.py  mirror.py  opencode.py  paths.py  profiles.py  report.py  reviewer.py  server.py  telemetry.py
reviewer_mcp/prompts/: plan_review.md
tests/: test_autostart.py  test_brain_sync.py  test_mirror.py  test_opencode.py  test_profiles.py  test_report.py  test_reviewer.py  test_server.py  test_telemetry.py
