[project]
name = "codex-reviewer-mcp"
version = "0.1.0"
description = "MCP server that invokes a second LLM (GitHub Models API) to challenge/verify the primary coding agent's plans and diffs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_reviewer_mcp*"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
