[project]
name = "reviewer-mcp"
version = "0.1.0"
description = "MCP server package that invokes GitHub Models reviewers to challenge the primary coding agent's plans and diffs"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reviewer_mcp*"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
